--- a/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
+++ b/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
@@ -15,10 +15,14 @@
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Microservice Platform</Product>
-    <AssemblyVersion>1.0.122.3</AssemblyVersion>
+    <AssemblyVersion>1.0.123.10</AssemblyVersion>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <FileVersion>1.0.122.3</FileVersion>
-    <Version>1.0.122.3</Version>
+    <FileVersion>1.0.123.10</FileVersion>
+    <Version>1.0.123.10</Version>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>portable</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\TomPIT.Core\TomPIT.Core.csproj" />
@@ -28,6 +32,9 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.8.12" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.10.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BigData\" />
