--- a/Sys/TomPIT.StorageProvider.Sql/TomPIT.StorageProvider.Sql.csproj
+++ b/Sys/TomPIT.StorageProvider.Sql/TomPIT.StorageProvider.Sql.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.0.122.3</AssemblyVersion>
-    <FileVersion>1.0.122.3</FileVersion>
-    <Version>1.0.122.3</Version>
+    <AssemblyVersion>1.0.123.10</AssemblyVersion>
+    <FileVersion>1.0.123.10</FileVersion>
+    <Version>1.0.123.10</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
@@ -21,4 +21,7 @@
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.StorageProviders.Sql&quot;" />
   </Target>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All" />
+  </ItemGroup>
 </Project>
