--- a/Rest/TomPIT.Rest.Api/Rest.csproj
+++ b/Rest/TomPIT.Rest.Api/Rest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -9,9 +9,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>TomPIT.Rest.App</AssemblyName>
     <RootNamespace>TomPIT.Rest</RootNamespace>
-    <AssemblyVersion>1.0.127.1</AssemblyVersion>
-    <FileVersion>1.0.127.1</FileVersion>
-    <Version>1.0.127.1</Version>
+    <AssemblyVersion>1.0.128.3</AssemblyVersion>
+    <FileVersion>1.0.128.3</FileVersion>
+    <Version>1.0.128.3</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>portable</DebugType>
@@ -25,7 +25,7 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-		<PackageReference Include="lz4net" Version="1.0.15.93" />
+    <PackageReference Include="lz4net" Version="1.0.15.93" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
