--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -13,15 +13,50 @@
     <FileVersion>1.0.203.5</FileVersion>
     <Version>1.0.203.5</Version>
   </PropertyGroup>
-  <ItemGroup>
+	<PropertyGroup>
+		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.2.0" />
+		<PackageReference Include="Microsoft.NET.Sdk.Razor" Version="$(MicrosoftNETSdkRazorPackageVersion)" PrivateAssets="All" />
+	</ItemGroup>
+	<ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
     <ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
     <ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
     <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
     <ProjectReference Include="..\TomPIT.Templates.IoT\TomPIT.Templates.IoT.csproj" />
+	
   </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="wwwroot\**\*" />
+		<EmbeddedResource Remove="wwwroot\Assets\Styles\Designers\Variables.css" />
+		<EmbeddedResource Remove="wwwroot\Assets\Styles\Designers\Variables.less" />
+		<EmbeddedResource Remove="wwwroot\Assets\Styles\Designers\Variables.min.css" />
+		<None Remove="wwwroot\Assets\Styles\Designers\iotViewDesign.less" />
+		<None Remove="wwwroot\Assets\Styles\Designers\iotViewDesign.min.css" />
+		<None Remove="wwwroot\Assets\Styles\Designers\Variables.css" />
+		<None Remove="wwwroot\Assets\Styles\Designers\Variables.less" />
+		<None Remove="wwwroot\Assets\Styles\Designers\Variables.min.css" />
+		<None Remove="wwwroot\Assets\Styles\iotView.css" />
+		<Content Include="wwwroot\Assets\Styles\Designers\Variables.css">
+		  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+		<Content Include="wwwroot\Assets\Styles\Designers\Variables.less">
+		  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+		<Content Include="wwwroot\Assets\Styles\Designers\Variables.min.css">
+		  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+	  <Content Update="Views\Ide\Designers\IoTView.cshtml">
+	    <Pack>$(IncludeRazorContentInPack)</Pack>
+	  </Content>
+	</ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.Templates.IoT.Design&quot;" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.Templates.IoT.Design&quot;&#xD;&#xA;copy &quot;$(TargetDir)$(TargetName).Views.dll&quot; &quot;c:\Deploy\Plugins\TomPIT.Templates.IoT.Design&quot;" />
   </Target>
 </Project>
