IoT views fixes

--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
@@ -26,6 +26,7 @@
 	<ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
+    <ProjectReference Include="..\..\Runtime\TomPIT.Extensions\TomPIT.Extensions.csproj" />
     <ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
     <ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
     <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
