--- a/App/TomPIT.App.UI/bundleconfig.json
+++ b/App/TomPIT.App.UI/bundleconfig.json
@@ -56,6 +56,7 @@
 		"outputFileName": "wwwroot/assets/messaging.min.js",
 		"inputFiles": [
 			"wwwroot/assets/scripts/signalr.js",
+			"wwwroot/assets/scripts/d3.js",
 			"wwwroot/assets/scripts/messaging.js"
 		],
 		"minify": {
