--- a/Development/TomPIT.Templates.IoT/TomPIT.Templates.IoT.csproj
+++ b/Development/TomPIT.Templates.IoT/TomPIT.Templates.IoT.csproj
@@ -17,6 +17,7 @@
 		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="lz4net" Version="1.0.15.93" />
 		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
