Invoke type serialization

--- a/Management/TomPIT.Management/TomPIT.Management.csproj
+++ b/Management/TomPIT.Management/TomPIT.Management.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>TomPIT</RootNamespace>
-    <AssemblyVersion>1.0.212.6</AssemblyVersion>
-    <FileVersion>1.0.212.6</FileVersion>
-    <Version>1.0.212.6</Version>
+    <RootNamespace>TomPIT.Management</RootNamespace>
+    <AssemblyVersion>1.0.215.1</AssemblyVersion>
+    <FileVersion>1.0.215.1</FileVersion>
+    <Version>1.0.215.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
