--- a/Sys/TomPIT.StorageProvider.Azure/TomPIT.StorageProvider.Azure.csproj
+++ b/Sys/TomPIT.StorageProvider.Azure/TomPIT.StorageProvider.Azure.csproj
@@ -1,17 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyVersion>1.0.321.1</AssemblyVersion>
+    <FileVersion>1.0.321.1</FileVersion>
+    <Version>1.0.321.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
     <ProjectReference Include="..\TomPIT.Sys.Api\TomPIT.Sys.Api.csproj" />
   </ItemGroup>
-
 </Project>
