--- a/Sys/TomPIT.StorageProvider.Azure/TomPIT.StorageProvider.Azure.csproj
+++ b/Sys/TomPIT.StorageProvider.Azure/TomPIT.StorageProvider.Azure.csproj
@@ -1,16 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.0.321.1</AssemblyVersion>
-    <FileVersion>1.0.321.1</FileVersion>
-    <Version>1.0.321.1</Version>
+    <AssemblyVersion>1.0.321.2</AssemblyVersion>
+    <FileVersion>1.0.321.2</FileVersion>
+    <Version>1.0.321.2</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="9.4.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
     <ProjectReference Include="..\TomPIT.Sys.Api\TomPIT.Sys.Api.csproj" />
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.StorageProviders.Azure&quot;" />
+  </Target>
 </Project>
