--- a/Cdn/Cdn/Cdn.csproj
+++ b/Cdn/Cdn/Cdn.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <AssemblyVersion>1.0.328.1</AssemblyVersion>
-    <FileVersion>1.0.328.1</FileVersion>
-    <Version>1.0.328.1</Version>
+    <AssemblyVersion>1.0.329.1</AssemblyVersion>
+    <FileVersion>1.0.329.1</FileVersion>
+    <Version>1.0.329.1</Version>
     <RootNamespace>TomPIT.Cdn</RootNamespace>
     <AssemblyName>TomPIT.Cdn</AssemblyName>
   </PropertyGroup>
