--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.Templates.IoT.Design.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
