--- a/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
+++ b/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Globals">
     <SccProjectName>
     </SccProjectName>
@@ -15,10 +15,10 @@
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Microservice Platform</Product>
-    <AssemblyVersion>1.0.503.1</AssemblyVersion>
+    <AssemblyVersion>1.0.506.4</AssemblyVersion>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <FileVersion>1.0.503.1</FileVersion>
-    <Version>1.0.503.1</Version>
+    <FileVersion>1.0.506.4</FileVersion>
+    <Version>1.0.506.4</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
