--- a/Development/TomPIT.Templates.IoT/TomPIT.Templates.IoT.csproj
+++ b/Development/TomPIT.Templates.IoT/TomPIT.Templates.IoT.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -9,9 +9,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>TomPIT.IoT</RootNamespace>
     <AssemblyName>TomPIT.IoT</AssemblyName>
-    <AssemblyVersion>1.0.503.1</AssemblyVersion>
-    <FileVersion>1.0.503.1</FileVersion>
-    <Version>1.0.503.1</Version>
+    <AssemblyVersion>1.0.506.4</AssemblyVersion>
+    <FileVersion>1.0.506.4</FileVersion>
+    <Version>1.0.506.4</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
