--- a/Development/TomPIT.BigData/TomPIT.BigData.csproj
+++ b/Development/TomPIT.BigData/TomPIT.BigData.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.0.522.3</AssemblyVersion>
-    <FileVersion>1.0.522.3</FileVersion>
-    <Version>1.0.522.3</Version>
+    <AssemblyVersion>1.0.531.1</AssemblyVersion>
+    <FileVersion>1.0.531.1</FileVersion>
+    <Version>1.0.531.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
