--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -1,7 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyVersion>1.0.531.1</AssemblyVersion>
+    <FileVersion>1.0.531.1</FileVersion>
+    <Version>1.0.531.1</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
@@ -22,7 +24,6 @@
     <EmbeddedResource Include="wwwroot\assets\reporting.min.css" />
     <EmbeddedResource Include="wwwroot\assets\reporting.min.js" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="19.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -33,17 +34,14 @@
     <PackageReference Include="Microsoft.NET.Sdk.Razor" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Reference Include="System">
       <HintPath>System</HintPath>
     </Reference>
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="package.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -51,20 +49,16 @@
       <DependentUpon>package.json</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <None Update="package.json">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>package.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.Templates.Reporting&quot;&#xD;&#xA;copy &quot;$(TargetDir)$(TargetName).Views.dll&quot; &quot;c:\Deploy\Plugins\TomPIT.Templates.Reporting&quot;" />
   </Target>
-
 </Project>
