--- a/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
+++ b/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BigData\" />
