--- a/Development/TomPIT.Development.UI/bundleconfig.json
+++ b/Development/TomPIT.Development.UI/bundleconfig.json
@@ -38,15 +38,14 @@
 		},
 		"sourceMap": false
 	},
-	{
-		"outputFileName": "wwwroot/assets/scripts.min.js",
+  {
+    "outputFileName": "wwwroot/assets/scripts.min.js",
     "inputFiles": [
       "wwwroot/assets/scripts/jquery.js",
       "wwwroot/assets/scripts/tether.js",
       "wwwroot/assets/scripts/popper.js",
       "wwwroot/assets/scripts/tooltip.js",
       "wwwroot/assets/scripts/bootstrap.js",
-      "wwwroot/assets/scripts/fontawesome-all.js",
       "wwwroot/assets/scripts/jquery-ui-1.12.1.js",
       "wwwroot/assets/libraries/Knockout/Latest/knockout.js",
       "wwwroot/assets/libraries/devextreme/Latest/dx.all.js",
@@ -62,12 +61,23 @@
       "wwwroot/assets/scripts/form.js",
       "wwwroot/assets/scripts/jquery.number.js"
     ],
-		"minify": {
-			"enabled": true,
-			"renameLocals": false
-		},
-		"sourceMap": false
-	},
+    "minify": {
+      "enabled": true,
+      "renameLocals": false
+    },
+    "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/assets/fonts.min.js",
+    "inputFiles": [
+      "wwwroot/assets/scripts/fontawesome-all.js"
+    ],
+    "minify": {
+      "enabled": true,
+      "renameLocals": false
+    },
+    "sourceMap": false
+  },
 	{
 		"outputFileName": "wwwroot/assets/scripts.foot.min.js",
 		"inputFiles": [
