ISourceCode interface ommited

--- a/Development/TomPIT.Development.UI/bundleconfig.json
+++ b/Development/TomPIT.Development.UI/bundleconfig.json
@@ -19,7 +19,7 @@
   {
     "outputFileName": "wwwroot/assets/idemap.min.css",
     "inputFiles": [
-      "wwwroot/assets/styles/bootstrap/bootstrap.css",
+      //"wwwroot/assets/styles/bootstrap/bootstrap.css",
       "wwwroot/assets/styles/fontawesome.css"
     ],
     "minify": {
