--- a/App/TomPIT.App.UI/bundleconfig.json
+++ b/App/TomPIT.App.UI/bundleconfig.json
@@ -66,7 +66,7 @@
       "wwwroot/assets/scripts/form.js"
     ],
     "minify": {
-      "enabled": true,
+      "enabled": false,
       "renameLocals": false
     },
     "sourceMap": false
