--- a/Cdn/Cdn/Cdn.csproj
+++ b/Cdn/Cdn/Cdn.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <AssemblyVersion>1.1.924.6</AssemblyVersion>
-    <FileVersion>1.1.924.6</FileVersion>
-    <Version>1.1.924.6</Version>
+    <AssemblyVersion>1.1.1103.16</AssemblyVersion>
+    <FileVersion>1.1.1103.16</FileVersion>
+    <Version>1.1.1103.16</Version>
     <RootNamespace>TomPIT.Cdn</RootNamespace>
     <AssemblyName>TomPIT.Experience.Cdn</AssemblyName>
   </PropertyGroup>
