--- a/Reporting/TomPIT.Reporting/package.json
+++ b/Reporting/TomPIT.Reporting/package.json
@@ -2,12 +2,11 @@
   "version": "1.0.0",
   "name": "Reporting",
   "private": true,
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
+    "@devexpress/analytics-core": "19.2.3",
     "cldrjs": "^0.5.0",
-    "globalize": "^1.3.0",
-    "@devexpress/analytics-core": "19.1-next",
-    "devexpress-reporting": "19.1-next"
+    "devexpress-reporting": "19.2.3",
+    "globalize": "^1.3.0"
   }
 }
