--- a/Development/TomPIT.Development.UI/bundleconfig.json
+++ b/Development/TomPIT.Development.UI/bundleconfig.json
@@ -5,6 +5,7 @@
       "wwwroot/assets/fonts/opensans/opensans.css",
       "wwwroot/assets/styles/bootstrap/bootstrap.css",
       "wwwroot/assets/libraries/devextreme/Latest/dx.common.css",
+      //"wwwroot/assets/libraries/devextreme/Latest/dx.light.css",
       "wwwroot/assets/libraries/devextreme/Latest/dx.material.blue.light.css",
       "wwwroot/assets/styles/development.css",
       "wwwroot/assets/styles/tompit.css",
