--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyVersion>1.1.1121.1</AssemblyVersion>
-    <FileVersion>1.1.1121.1</FileVersion>
-    <Version>1.1.1121.1</Version>
+    <AssemblyVersion>1.1.1124.1</AssemblyVersion>
+    <FileVersion>1.1.1124.1</FileVersion>
+    <Version>1.1.1124.1</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
@@ -23,11 +23,13 @@
     <EmbeddedResource Include="wwwroot\assets\reporting.design.min.js" />
     <EmbeddedResource Include="wwwroot\assets\reporting.min.css" />
     <EmbeddedResource Include="wwwroot\assets\reporting.min.js" />
+    <EmbeddedResource Include="wwwroot\assets\ko.min.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="19.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.0.0" />
+    <PackageReference Include="System.CodeDom" Version="4.6.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
